--- a/docs/examples/ensemble-window.ipynb
+++ b/docs/examples/ensemble-window.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "Many changepoint detection (CPD) procedure can be implemented with `ruptures`. In most case, these procedures involve a search method relying on only one cost function. We are investigating here a way of building an ensemble model, on top of `ruptures` package, using the [window search method](../user-guide/detection/window.md) that will rely on several cost functions. The incentive for this approach is to combine the methods considering only one cost into an aggregated score. \n",
     "\n",
-    "The interested reader can refer to [Katser2021](#Katser2021) for a more complete introduction. As they do in the paper, we will make the assumption that the number of changepoints to detect is known in advance."
+    "The interested reader can refer to [Katser2021](#Katser2021) for a more complete introduction. As in the paper, we will make the assumption that the number of changepoints to detect is known in advance."
    ]
   },
   {
