--- a/docs/examples/ensemble-window.ipynb
+++ b/docs/examples/ensemble-window.ipynb
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have the performance of the classical method on each cost function, let's dive into the ensemble method. We will then compare the results."
+    "Now that we have the performances of the classical method on each cost function, let's dive into the ensemble method. We will then compare the results."
    ]
   },
   {
