--- a/docs/examples/ensemble-window.ipynb
+++ b/docs/examples/ensemble-window.ipynb
@@ -161,7 +161,7 @@
    "source": [
     "### Ensemble method: multiple costs for one prediction\n",
     "\n",
-    "The paper we rely on [Katser2021](#Katser2021), uses the score from each cost function to detect the changepoints. This is why we stored them in the previous section."
+    "[Katser2021](#Katser2021) uses the score from each cost function to detect the changepoints. This is why we stored them in the previous section."
    ]
   },
   {
