--- a/docs/examples/ensemble-window.ipynb
+++ b/docs/examples/ensemble-window.ipynb
@@ -205,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The idea of the CPD Ensemble method is to scale and aggregate the scores with some well chosen scaling and aggregation function to get new score which will allow us to get a better prediction of the changepoints.\n",
+    "The idea of the CPD Ensemble method is use some well chosen functions in order to both scale and aggregate the individual scores to get a new score which will allow us to get a better prediction of the changepoints.\n",
     "\n",
     "In the paper, they perform multiple tests on several scaling and aggregation functions on two datasets. In turned out that the *MinAbs* scaling function and the *WeightedSum* aggregation function worked the best.\n",
     "\n",
