--- a/docs/examples/ensemble-window.ipynb
+++ b/docs/examples/ensemble-window.ipynb
@@ -207,7 +207,7 @@
    "source": [
     "The idea of the CPD Ensemble method is use some well chosen functions in order to both scale and aggregate the individual scores to get a new score which will allow us to get a better prediction of the changepoints.\n",
     "\n",
-    "In the paper, they perform multiple tests on several scaling and aggregation functions on two datasets. In turned out that the *MinAbs* scaling function and the *WeightedSum* aggregation function worked the best.\n",
+    "In [Katser2021](#Katser2021), the authors perform multiple tests on several scaling and aggregation functions on two datasets. It turned out that the *MinAbs* scaling function and the *WeightedSum* aggregation function worked best.\n",
     "\n",
     "The *MinAbs* function is defined as follows:\n",
     "For $s$ a timeseries, \n",
