--- a/docs/examples/ensemble-window.ipynb
+++ b/docs/examples/ensemble-window.ipynb
@@ -388,7 +388,7 @@
     "id": "c3JICZPZZ5dU"
    },
    "source": [
-    "### References\n",
+    "## References\n",
     "\n",
     "<a id=\"Katser2021\">[Katser2021]</a>\n",
     "Katser, I., Kozitsin, V., Lobachev, V., & Maksimov, I. (2021). Unsupervised Offline Changepoint Detection Ensembles. Applied Sciences, 11(9), 4280."
