--- a/docs/examples/ensemble-window.ipynb
+++ b/docs/examples/ensemble-window.ipynb
@@ -6,15 +6,25 @@
     "id": "WHSd310cTJGp"
    },
    "source": [
-    "# Changepoint Detection Ensembles: Window search method\n",
+    "# Combining several cost functions\n",
     "\n",
     "<!-- {{ add_binder_block(page) }} -->\n",
     "\n",
     "## Introduction\n",
     "\n",
-    "Many changepoint detection (CPD) procedure can be implemented with `ruptures`. In most case, these procedures involve a search method relying on only one cost function. We are investigating here a way of building an ensemble model, on top of `ruptures` package, using the [window search method](../user-guide/detection/window.md) that will rely on several cost functions. The incentive for this approach is to combine the methods considering only one cost into an aggregated score. \n",
+    "In `ruptures`, change point detection procedures make use of only one cost function.\n",
+    "The choice of the cost function is critical as it is related to the type of change to find. \n",
+    "For instance, [CostL2](../user-guide/costs/costl2.md) can detect shifts in the mean, [CostNormal](../user-guide/costs/costnormal.md) can detect shifts in the mean and the covariance structure, [CostAR](../user-guide/costs/costar.md) can detect shifts in the auto-regressive structure, etc.\n",
     "\n",
-    "The interested reader can refer to [Katser2021](#Katser2021) for a more complete introduction. As in the paper, we will make the assumption that the number of changepoints to detect is known in advance."
+    "However, in many settings, several types of changes co-exist in the same signal and a single cost function is not able to spot all changes simultaneously.\n",
+    "To cope with this issue, a procedure to merge several cost functions has been introduced [[Katser2021]](#Katser2021).\n",
+    "In a nutshell, a number of costs can be combined to yield an aggregated cost function which is sensitive to several types of changes.\n",
+    "The aggregated cost can then be used with any search method (such as the [window search method](../user-guide/detection/window.md)) to create change point detection algorithm.\n",
+    "\n",
+    "This example illustrates the aggregation procedure, also referred to as an ensemble model.\n",
+    "Here, only dynamic programming is considered, but all other search methods (e.g. [window sliding search method](../user-guide/detection/window.md), [PELT](../user-guide/detection/pelt.md), [binary segmentation](../user-guide/detection/binseg.md)) could be used.\n",
+    "In addition, the number of changes is assumed to be known by the user.\n",
+    "More details can be found in the original paper introducing the cost aggregation procedure [[Katser2021]](#Katser2021)."
    ]
   },
   {
@@ -25,7 +35,7 @@
    "source": [
     "## Setup\n",
     "\n",
-    "First, we make the necessary imports and generate a toy signal. In order to highlight the strength of the ensemble model, we concatenate two kinds of signals. "
+    "First, we make the necessary imports and generate a multivariate toy signal which contains mean shifts and linear changes (i.e. changes in the linear relationship between the dimensions of the signal). "
    ]
   },
   {
@@ -41,82 +51,65 @@
    },
    "outputs": [],
    "source": [
-    "import time  # for execution time comparison\n",
-    "\n",
     "import matplotlib.pyplot as plt  # for display purposes\n",
     "import numpy as np\n",
     "\n",
     "import ruptures as rpt  # our package\n",
-    "from ruptures.metrics import randindex\n",
+    "from ruptures.metrics import hamming\n",
     "\n",
     "# generate a signal\n",
-    "n_samples, dim, sigma = 250, 3, 4\n",
+    "n_samples, n_dims, sigma = 500, 3, 4\n",
     "n_bkps = 10  # number of breakpoints\n",
     "\n",
     "# to make it more complex, we concatenate two different signals together\n",
     "signal_constant, bkps_constant = rpt.pw_constant(\n",
-    "    n_samples=n_samples, n_features=dim, n_bkps=n_bkps // 2, noise_std=sigma, seed=1\n",
+    "    n_samples=n_samples // 2, n_features=n_dims, n_bkps=n_bkps // 2, noise_std=sigma\n",
     ")\n",
+    "\n",
     "signal_linear, bkps_linear = rpt.pw_linear(\n",
-    "    n_samples=n_samples,\n",
-    "    n_features=dim - 1,\n",
+    "    n_samples=n_samples // 2,\n",
+    "    n_features=n_dims - 1,\n",
     "    n_bkps=n_bkps - n_bkps // 2 - 1,\n",
     "    noise_std=sigma,\n",
-    "    seed=1,\n",
     ")\n",
-    "signal = np.append(signal_constant, signal_linear, axis=0)\n",
-    "bkps = sorted(bkps_constant + list(np.array(bkps_linear) + n_samples))\n",
     "\n",
-    "# As it is done in the paper, we use the z-normalization\n",
-    "signal = (signal - signal.mean(axis=0)) / signal.std(axis=0)\n",
+    "signal = np.r_[signal_constant, signal_linear]\n",
+    "bkps_true = sorted(bkps_constant + list(np.array(bkps_linear) + n_samples // 2))\n",
     "\n",
-    "fig, ax_array = rpt.display(signal, bkps)"
+    "# z-normalization\n",
+    "signal = (signal - signal.mean(axis=0)) / signal.std(axis=0)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "23czz_5OXsQM"
-   },
+   "metadata": {},
    "source": [
-    "## Window search method\n",
-    "\n",
-    "In the following, we are going to use the cost functions:\n",
-    "\n",
-    "- [Autoregressive model change](../user-guide/costs/costautoregressive.md) (ar)\n",
-    "- [Change detection with a Mahalanobis-type metric](../user-guide/costs/costml.md) (mahalanobis)\n",
-    "- [Least absolute deviation](../user-guide/costs/costl1.md) (l1)\n",
-    "- [Least squared deviation](../user-guide/costs/costl2.md) (l2)\n",
-    "- [Linear model change](../user-guide/costs/costlinear.md) (linear)"
+    "The following plot shows the signal and the true change points (changes occur when the background colour shifts from blue to pink and vice versa)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "ouDY8rL_j2GK"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "cost_functions = [\n",
-    "    \"ar\",\n",
-    "    \"mahalanobis\",\n",
-    "    \"l1\",\n",
-    "    \"l2\",\n",
-    "    \"linear\",\n",
-    "]  # cost function that we will use\n",
-    "window_size = 20  # best hyperparameter according to the paper"
+    "# show the signal\n",
+    "fig, ax_array = rpt.display(signal, bkps_true)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "8xgYOobTXxAH"
-   },
+   "metadata": {},
    "source": [
-    "### Classical method: one cost for one prediction\n",
+    "## Using one cost function at a time\n",
     "\n",
-    "Let's start with the classical method: the window search method rely on only one cost function."
+    "Recall that two types of changes are present in the previous signal: mean shifts and linear changes.\n",
+    "The most adapted costs for these types are:\n",
+    "\n",
+    "- [CostL2](../user-guide/costs/costl2.md) (for mean shifts),\n",
+    "- [CostLinear](../user-guide/costs/costlinear.md) (for linear changes).\n",
+    "\n",
+    "The following cell shows that using a single cost function is not enough to detect all changes."
    ]
   },
   {
@@ -131,26 +124,33 @@
    },
    "outputs": [],
    "source": [
-    "scores = []  # save the scores for the ensemble method (see next section)\n",
-    "rand_indexes = {}  # to keep track of the performances\n",
+    "list_of_cost_functions = [\"l2\", \"linear\"]\n",
     "\n",
-    "for cost in cost_functions:\n",
-    "    start_time = time.time()\n",
-    "\n",
-    "    algo = rpt.Window(width=window_size, model=cost, jump=1).fit(signal)\n",
+    "for cost_str in list_of_cost_functions:\n",
+    "    # Compute the changes\n",
+    "    algo = rpt.Dynp(model=cost_str).fit(signal)\n",
     "    predicted_bkps = algo.predict(n_bkps=n_bkps)\n",
-    "\n",
-    "    print(f\"{cost} cost computation in {time.time() - start_time:.3f} s\")\n",
-    "\n",
-    "    rand_indexes[cost] = np.around(randindex(bkps, predicted_bkps), 3)\n",
-    "    scores.append(algo.score)"
+    "    # Display the prediction\n",
+    "    fig, (ax,) = rpt.display(signal[:, 0], bkps_true, predicted_bkps)\n",
+    "    ax.margins(x=0)\n",
+    "    ax.set_title(\n",
+    "        f\"Cost {cost_str} (Hamming error: {hamming(bkps_true, predicted_bkps):.2f})\"\n",
+    "    )"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have the performances of the classical method on each cost function, let's dive into the ensemble method. We will then compare the results."
+    "<span style=\"color:red\">\n",
+    "ADD SMALL COMMENTS \n",
+    "\n",
+    "    - Only the first dimension of the signal is shown\n",
+    "    - the hamming error: between 0 and 1, lower is better\n",
+    "    - CostL2 detects the mean shifts, but not the linear shifts\n",
+    "    - CostLinear is not good on either changes.\n",
+    "    - Overall performance is not good.\n",
+    "</span>."
    ]
   },
   {
@@ -159,55 +159,11 @@
     "id": "qB3Nhz3njORl"
    },
    "source": [
-    "### Ensemble method: multiple costs for one prediction\n",
+    "## Using several cost functions: the ensemble method\n",
     "\n",
-    "[Katser2021](#Katser2021) uses the score from each cost function to detect the changepoints. This is why we stored them in the previous section."
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "!!! note\n",
-    "    As a reminder, [here](../user-guide/detection/window.md) is how the score is computed for the window-based search method, it can also be called the *discrepancy measure*."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's see how those scores look like. In the following cell, each row represents the score for a specific cost function."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 729
-    },
-    "id": "nBk9sihcLk2d",
-    "outputId": "90bf9753-3ca1-43fd-a3c9-d103c5a923a0"
-   },
-   "outputs": [],
-   "source": [
-    "scores = np.array(scores).T\n",
+    "Roughly, the ensemble method scales each  and aggregate the individual scores to get a new score which will allow us to get a better prediction of the changepoints.\n",
     "\n",
-    "# Display the scores with the change points to predict\n",
-    "append_scores = np.append(\n",
-    "    np.ones((window_size // 2, len(cost_functions))) * float(\"inf\"), scores, axis=0\n",
-    ")\n",
-    "_ = rpt.display(append_scores, bkps)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The idea of the CPD Ensemble method is use some well chosen functions in order to both scale and aggregate the individual scores to get a new score which will allow us to get a better prediction of the changepoints.\n",
-    "\n",
-    "In [Katser2021](#Katser2021), the authors perform multiple tests on several scaling and aggregation functions on two datasets. It turned out that the *MinAbs* scaling function and the *WeightedSum* aggregation function worked best.\n",
+    "In [[Katser2021]](#Katser2021), the authors perform multiple tests on several scaling and aggregation functions on two datasets. It turned out that the *MinAbs* scaling function and the *WeightedSum* aggregation function worked best.\n",
     "\n",
     "The *MinAbs* function is defined as follows:\n",
     "For $s$ a timeseries, \n",
@@ -409,6 +365,7 @@
   },
   "kernelspec": {
    "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -421,9 +378,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
