--- a/docs/examples/ensemble-window.ipynb
+++ b/docs/examples/ensemble-window.ipynb
@@ -22,7 +22,7 @@
     "The aggregated cost can then be used with any search method (such as the [window search method](../user-guide/detection/window.md)) to create change point detection algorithm.\n",
     "\n",
     "This example illustrates the aggregation procedure, also referred to as an ensemble model.\n",
-    "Here, only dynamic programming is considered, but all other search methods (e.g. [window sliding search method](../user-guide/detection/window.md), [PELT](../user-guide/detection/pelt.md), [binary segmentation](../user-guide/detection/binseg.md)) could be used.\n",
+    "Here, only [dynamic programming](../user-guide/detection/dynp.md) is considered, but all other search methods (e.g. [window sliding search method](../user-guide/detection/window.md), [PELT](../user-guide/detection/pelt.md), [binary segmentation](../user-guide/detection/binseg.md)) could be used.\n",
     "In addition, the number of changes is assumed to be known by the user.\n",
     "More details can be found in the original paper introducing the cost aggregation procedure [[Katser2021]](#Katser2021)."
    ]
@@ -70,7 +70,7 @@
     "    n_samples=n_samples // 2,\n",
     "    n_features=n_dims - 1,\n",
     "    n_bkps=n_bkps - n_bkps // 2 - 1,\n",
-    "    noise_std=sigma,\n",
+    "    noise_std=0,\n",
     ")\n",
     "\n",
     "signal = np.r_[signal_constant, signal_linear]\n",
@@ -142,15 +142,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:red\">\n",
-    "ADD SMALL COMMENTS \n",
+    "In the previous plots, only the first dimension of the signal is shown. The hamming error is also added. It goes from 0 to 1, the lower the better.\n",
     "\n",
-    "    - Only the first dimension of the signal is shown\n",
-    "    - the hamming error: between 0 and 1, lower is better\n",
-    "    - CostL2 detects the mean shifts, but not the linear shifts\n",
-    "    - CostLinear is not good on either changes.\n",
-    "    - Overall performance is not good.\n",
-    "</span>."
+    "The first plot shows that the [CostL2](../user-guide/costs/costl2.md) allows the [dynamic programming detector](../user-guide/detection/dynp.md) to find the true breakpoints only on the first part of the signal. Whereas the second plot tells us that the [CostLinear](../user-guide/costs/costlinear.md) is less helpful on the entire signal.\n",
+    "The overall performance of the two detectors is not satisfying."
    ]
   },
   {
@@ -161,24 +156,22 @@
    "source": [
     "## Using several cost functions: the ensemble method\n",
     "\n",
-    "Roughly, the ensemble method scales each  and aggregate the individual scores to get a new score which will allow us to get a better prediction of the changepoints.\n",
+    "Roughly, the ensemble method scales each individual score and aggregates them to get a new score which will allow us to get a better prediction of the changepoints.\n",
     "\n",
-    "In [[Katser2021]](#Katser2021), the authors perform multiple tests on several scaling and aggregation functions on two datasets. It turned out that the *MinAbs* scaling function and the *WeightedSum* aggregation function worked best.\n",
+    "In [[Katser2021]](#Katser2021), the authors perform multiple tests on several scaling and aggregation functions on two datasets. It turned out that the *MinMax* scaling function and the *Min* aggregation function worked best.\n",
     "\n",
-    "The *MinAbs* function is defined as follows:\n",
+    "The *MinMax* function is defined as follows:\n",
     "For $s$ a timeseries, \n",
     "\n",
     "$$\n",
-    "\\textit{MinAbs}(s)_i = \\frac{s_i}{|\\min_{j}{s_j}|}\n",
+    "\\textit{MinMax}(s)_i = \\frac{s_i - \\max_{j}{s_j}}{\\max_{j}{s_j} - \\min_{j}{s_j}}\n",
     "$$\n",
     "\n",
-    "The *WeightedSum* function is defined as follows:\n",
-    "Let $s^n, n \\in \\{1, ..., N\\}$ be $N$ timeseries, we have to distinguish the \"original\" timeseries $s^n$ from its scaled version $\\overline{s}^n = \\textit{MinAbs}(s^n)$. We then have\n",
-    "\n",
-    "$$ \\textit{WeightedSum}((s^{n})_{n \\in \\{1, ..., N\\}})_i = \\sum_{n \\in \\{1, ..., N\\}}{\\lambda_n \\overline{s}_i^n} \n",
-    "$$\n",
-    "\n",
-    "where $\\lambda_n = \\frac{\\max_{j}{s_j^n} - \\min_{j}{s_j^n}}{\\mu(s^n) - \\min_{j}{s_j^n}}$ with $\\mu(s^n)$ the mean of $s^n$."
+    "The *Min* function is defined as follows:\n",
+    "Let $s^n, n \\in \\{1, ..., N\\}$ be $N$ timeseries, we have\n",
+    "$$ \n",
+    "\\textit{Min}((s^n)_{n \\in \\{1, ..., N\\}})_i = \\min_{p \\in \\{1, ..., N\\}}{s^p_i} \n",
+    "$$"
    ]
   },
   {
@@ -194,32 +187,21 @@
    },
    "outputs": [],
    "source": [
-    "def min_abs_scaling(array):\n",
-    "    return array / abs(np.min(array, axis=0) + 1e-8)\n",
+    "def min_max_scaling(array):\n",
+    "    return (array - np.max(array, axis=0)) / (\n",
+    "        np.max(array, axis=0) - np.min(array, axis=0) + 1e-8\n",
+    "    )\n",
     "\n",
     "\n",
-    "def weighted_sum_aggregation(array):\n",
-    "    min_array = array.min(axis=0)\n",
-    "    weights = (array.max(axis=0) - min_array) / (array.mean(axis=0) - min_array)\n",
-    "\n",
-    "    return min_abs_scaling(array) @ weights\n",
-    "\n",
-    "\n",
-    "aggregated_scores = weighted_sum_aggregation(scores)\n",
-    "\n",
-    "# Display scaled and aggregated scores\n",
-    "append_scaled_aggregated_scores = np.append(\n",
-    "    np.ones(window_size // 2) * float(\"inf\"), aggregated_scores\n",
-    ")\n",
-    "rpt.display(append_scaled_aggregated_scores, bkps)\n",
-    "_ = plt.title(\"Scaled and aggregated score\")"
+    "def min_aggregation(array):\n",
+    "    return array.min(axis=1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's now detect the changepoints from the newly computed score. For that we need to define a *DummyCost* that will allow us to leverage `ruptures` power."
+    "A new detector needs to be build in order to combine the [CostL2](../user-guide/costs/costl2.md) and the [CostLinear](../user-guide/costs/costlinear.md). Here is how it can be build:"
    ]
   },
   {
@@ -230,51 +212,162 @@
    },
    "outputs": [],
    "source": [
-    "from ruptures.base import BaseCost\n",
+    "r\"\"\"Dynamic programming\"\"\"\n",
+    "from functools import lru_cache\n",
+    "\n",
+    "from ruptures.utils import sanity_check\n",
+    "from ruptures.costs import cost_factory\n",
+    "from ruptures.exceptions import BadSegmentationParameters\n",
     "\n",
     "\n",
-    "class DummyCost(BaseCost):\n",
+    "class DynpEnsemble(rpt.Dynp):\n",
     "\n",
-    "    r\"\"\"\n",
-    "    Dummy cost to pretend a real cost function.\n",
+    "    \"\"\"Find optimal change points using dynamic programming with more than one cost.\n",
+    "\n",
+    "    Given a segment model, it computes the best partition for which the\n",
+    "    sum of errors is minimum.\n",
     "    \"\"\"\n",
     "\n",
-    "    model = \"Dummy\"\n",
+    "    def __init__(self, models, min_size=2, jump=5, params=None):\n",
+    "        \"\"\"Creates a Dynp instance.\n",
     "\n",
-    "    def __init__(self) -> None:\n",
-    "        \"\"\"Initialize the object.\"\"\"\n",
-    "        self.signal = None\n",
-    "\n",
-    "    def fit(self, signal) -> \"DummyCost\":\n",
-    "        \"\"\"Set parameters of the instance.\n",
     "        Args:\n",
-    "            signal (array): signal. Shape (n_samples,) or (n_samples, n_features)\n",
+    "            models (list[str], optional): segment model, ex: [\"l1\"], [\"l2\", \"rbf\"], ...\n",
+    "            min_size (int, optional): minimum segment length.\n",
+    "            jump (int, optional): subsample (one every *jump* points).\n",
+    "            params (dict, optional): a dictionary of dictionnaries of parameters for the cost instances. One dictionnary of parameters per cost instance.\n",
+    "        \"\"\"\n",
+    "        self.model_names = models\n",
+    "        self.costs = []\n",
+    "        self.min_size = min_size\n",
+    "        for model in models:\n",
+    "            if params is None:\n",
+    "                self.costs.append(cost_factory(model=model))\n",
+    "            else:\n",
+    "                self.costs.append(cost_factory(model=model, **params[model]))\n",
+    "            self.min_size = max(self.min_size, self.costs[-1].min_size)\n",
+    "        self.jump = jump\n",
+    "        self.n_samples = None\n",
+    "\n",
+    "    @lru_cache(maxsize=None)\n",
+    "    def seg(self, start, end, n_bkps):\n",
+    "        \"\"\"Recurrence to find the optimal partition of signal[start:end].\n",
+    "\n",
+    "        This method is to be memoized and then used.\n",
+    "\n",
+    "        Args:\n",
+    "            start (int): start of the segment (inclusive)\n",
+    "            end (int): end of the segment (exclusive)\n",
+    "            n_bkps (int): number of breakpoints\n",
+    "\n",
+    "        Returns:\n",
+    "            dict: {(start, end): cost value, ...}\n",
+    "        \"\"\"\n",
+    "        jump, min_size = self.jump, self.min_size\n",
+    "\n",
+    "        if n_bkps == 0:\n",
+    "            cost = [\n",
+    "                self.costs[idx_cost].error(start, end)\n",
+    "                for idx_cost in range(len(self.costs))\n",
+    "            ]\n",
+    "            return {(start, end): np.array(cost)}\n",
+    "        elif n_bkps > 0:\n",
+    "            # Let's fill the list of admissible last breakpoints\n",
+    "            multiple_of_jump = (k for k in range(start, end) if k % jump == 0)\n",
+    "            admissible_bkps = list()\n",
+    "            for bkp in multiple_of_jump:\n",
+    "                n_samples = bkp - start\n",
+    "                # first check if left subproblem is possible\n",
+    "                if sanity_check(\n",
+    "                    n_samples=n_samples,\n",
+    "                    n_bkps=n_bkps - 1,\n",
+    "                    jump=jump,\n",
+    "                    min_size=min_size,\n",
+    "                ):\n",
+    "                    # second check if the right subproblem has enough points\n",
+    "                    if end - bkp >= min_size:\n",
+    "                        admissible_bkps.append(bkp)\n",
+    "\n",
+    "            assert (\n",
+    "                len(admissible_bkps) > 0\n",
+    "            ), \"No admissible last breakpoints found.\\\n",
+    "             start, end: ({},{}), n_bkps: {}.\".format(\n",
+    "                start, end, n_bkps\n",
+    "            )\n",
+    "\n",
+    "            # Compute the subproblems\n",
+    "            sub_problems = list()\n",
+    "            for bkp in admissible_bkps:\n",
+    "                left_partition = self.seg(start, bkp, n_bkps - 1)\n",
+    "                right_partition = self.seg(bkp, end, 0)\n",
+    "                tmp_partition = dict(left_partition)\n",
+    "                tmp_partition[(bkp, end)] = right_partition[(bkp, end)]\n",
+    "                sub_problems.append(tmp_partition)\n",
+    "\n",
+    "            # compute the matrix of cost, row = sub_problem, column = model\n",
+    "            cost_matrix = [\n",
+    "                np.sum(list(sub_problem.values()), axis=0)\n",
+    "                for sub_problem in sub_problems\n",
+    "            ]\n",
+    "\n",
+    "            aggregated_costs = min_aggregation(min_max_scaling(np.array(cost_matrix)))\n",
+    "\n",
+    "            # Find the optimal partition\n",
+    "            return sub_problems[np.argmin(aggregated_costs)]\n",
+    "\n",
+    "    def fit(self, signal) -> \"DynpEnsemble\":\n",
+    "        \"\"\"Create the cache associated with the signal.\n",
+    "\n",
+    "        Dynamic programming is a recurrence; intermediate results are cached to speed up\n",
+    "        computations. This method sets up the cache.\n",
+    "\n",
+    "        Args:\n",
+    "            signal (array): signal. Shape (n_samples, n_features) or (n_samples,).\n",
+    "\n",
     "        Returns:\n",
     "            self\n",
     "        \"\"\"\n",
-    "        if signal.ndim == 1:\n",
-    "            self.signal = signal.reshape(-1, 1)\n",
-    "        else:\n",
-    "            self.signal = signal\n",
-    "\n",
+    "        # clear cache\n",
+    "        self.seg.cache_clear()\n",
+    "        # update some params\n",
+    "        [self.costs[idx_cost].fit(signal) for idx_cost in range(len(self.costs))]\n",
+    "        self.n_samples = signal.shape[0]\n",
     "        return self\n",
     "\n",
-    "    def error(self, start, end) -> float:\n",
-    "        \"\"\"Return the approximation cost on the segment [start:end].\n",
+    "    def predict(self, n_bkps):\n",
+    "        \"\"\"Return the optimal breakpoints.\n",
+    "\n",
+    "        Must be called after the fit method. The breakpoints are associated with the signal passed\n",
+    "        to [`fit()`][ruptures.detection.dynp.Dynp.fit].\n",
+    "\n",
     "        Args:\n",
-    "            start (int): start of the segment\n",
-    "            end (int): end of the segment\n",
+    "            n_bkps (int): number of breakpoints.\n",
+    "\n",
+    "        Raises:\n",
+    "            BadSegmentationParameters: in case of impossible segmentation\n",
+    "                configuration\n",
+    "\n",
     "        Returns:\n",
-    "            + infinity\n",
+    "            list: sorted list of breakpoints\n",
     "        \"\"\"\n",
-    "        return float(\"inf\")"
+    "        # raise an exception in case of impossible segmentation configuration\n",
+    "        if not sanity_check(\n",
+    "            n_samples=self.costs[0].signal.shape[0],\n",
+    "            n_bkps=n_bkps,\n",
+    "            jump=self.jump,\n",
+    "            min_size=self.min_size,\n",
+    "        ):\n",
+    "            raise BadSegmentationParameters\n",
+    "        partition = self.seg(0, self.n_samples, n_bkps)\n",
+    "        bkps = sorted(e for s, e in partition.keys())\n",
+    "        return bkps"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then we are using the window search method to predict the changepoints."
+    "The newly made `DynpEnsemble` class is ready to be used."
    ]
   },
   {
@@ -291,15 +384,10 @@
    "outputs": [],
    "source": [
     "# create the ensemble change point detector\n",
-    "dummy_cost = DummyCost().fit(signal)\n",
-    "algo = rpt.Window(width=window_size, custom_cost=dummy_cost, jump=1)\n",
+    "algo = DynpEnsemble([\"l2\", \"linear\"])\n",
     "algo.fit(signal)\n",
-    "algo.score = aggregated_scores\n",
     "\n",
-    "ensemble_predicted_bkps = algo.predict(n_bkps=n_bkps)\n",
-    "rand_indexes[\"ensemble\"] = np.around(randindex(bkps, ensemble_predicted_bkps), 3)\n",
-    "\n",
-    "_ = [print(cost, rand_index) for cost, rand_index in rand_indexes.items()]"
+    "ensemble_predicted_bkps = algo.predict(n_bkps=n_bkps)"
    ]
   },
   {
@@ -315,7 +403,12 @@
    },
    "outputs": [],
    "source": [
-    "_ = rpt.display(signal, bkps, ensemble_predicted_bkps)"
+    "# Display the prediction\n",
+    "fig, (ax,) = rpt.display(signal[:, 0], bkps_true, ensemble_predicted_bkps)\n",
+    "ax.margins(x=0)\n",
+    "_ = ax.set_title(\n",
+    "    f\"Cost ensemble (Hamming error: {hamming(bkps_true, ensemble_predicted_bkps):.2f})\"\n",
+    ")"
    ]
   },
   {
@@ -326,7 +419,7 @@
     "\n",
     "Through this example, we have seen how to build an ensemble model to detect changepoints in a few lines of code.\n",
     "\n",
-    "This example is using a window search method, the algorithm for ensemble models using other search methods like Binary segmentation or Dynamic programming are given in the paper [Katser2021](#Katser2021)."
+    "This example is using a dynamic programming search method, the algorithm for ensemble models using other search methods like binary segmentation or window search are given in the paper [Katser2021](#Katser2021)."
    ]
   },
   {
@@ -335,7 +428,7 @@
    "source": [
     "## Authors\n",
     "\n",
-    "This example notebook has been authored by [Théo VINCENT](https://github.com/theovincent).\n"
+    "This example notebook has been authored by [Théo VINCENT](https://github.com/theovincent) and edited by [Olivier Boulant](https://github.com/oboulant) and [Charles Truong](https://github.com/deepcharles).\n"
    ]
   },
   {
