Update docs/examples/ensemble-dimensions.ipynb spelling mistake
Co-authored-by: Olivier Boulant <olivier.boulant@hey.com>

--- a/docs/examples/ensemble-dimensions.ipynb
+++ b/docs/examples/ensemble-dimensions.ipynb
@@ -11,7 +11,7 @@
     "## Introduction\n",
     "\n",
     "In `ruptures`, change point detection procedures make use of the same cost function along all the dimensions.\n",
-    "The choice of the cost function is critical as it is related to the type of change to find. \n",
+    "The choice of the cost function is critical as it is related to the type of changes to find. \n",
     "For instance, [CostL2](../user-guide/costs/costl2.md) can detect shifts in the mean, [CostNormal](../user-guide/costs/costnormal.md) can detect shifts in the mean and the covariance structure, [CostAR](../user-guide/costs/costautoregressive.md) can detect shifts in the auto-regressive structure, etc.\n",
     "\n",
     "However, in many settings, all the dimensions don't have the same type of changes and a single cost function is not able to spot all changes simultaneously.\n",
