--- a/docs/examples/ensemble-dimensions.ipynb
+++ b/docs/examples/ensemble-dimensions.ipynb
@@ -68,6 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create change points for both dimensions\n",
     "bkps = [329, 656, 972, 1291, 1642, 2000]\n",
     "n_samples = bkps[-1]\n",
     "bkps_1 = [bkps[0], bkps[1], bkps[4], n_samples]\n",
