--- a/docs/examples/ensemble-dimensions.ipynb
+++ b/docs/examples/ensemble-dimensions.ipynb
@@ -81,6 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Generate both signals given respective change points \n",
     "signal = np.zeros((n_samples, 2))\n",
     "val_cycle = cycle([0, 1])\n",
     "for (start, end) in rpt.utils.pairwise([0] + bkps_1):\n",
