--- a/docs/examples/ensemble-dimensions.ipynb
+++ b/docs/examples/ensemble-dimensions.ipynb
@@ -92,6 +92,7 @@
     "fig, axes = rpt.display(signal, bkps)\n",
     "axes[0].set_title(\"Noise free signal\")\n",
     "\n",
+    "# Add noise\n",
     "signal += np.random.normal(size=signal.shape)\n",
     "fig, axes = rpt.display(signal, bkps)\n",
     "_ = axes[0].set_title(\"Toy signal\")"
