--- a/docs/examples/ensemble-dimensions.ipynb
+++ b/docs/examples/ensemble-dimensions.ipynb
@@ -258,7 +258,7 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "This example shows a way of crafting a changepoint detection algorithm at the scale of the dimensions. This is a finer scale than the usual one: the signal scale.\n",
+    "Rather than using \"regular\" cost functions that needs to aggregate all dimensions in the first place, this example introduces a way of crafting a changepoint detection algorithm based on a smaller dimension level.\n",
     "\n",
     "Two options are presented: [intersection](#intersection) where a changepoint is detected only if it is detected along all dimensions and [union](#union) where a changepoint is detected as soon as one dimension has detected it."
    ]
