docs(example): typo

--- a/docs/examples/ensemble-dimensions.ipynb
+++ b/docs/examples/ensemble-dimensions.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "## Setup\n",
     "\n",
-    "First, we make the necessary imports and a few define utility functions"
+    "First, we make the necessary imports and define a few utility functions."
    ]
   },
   {
