--- a/docs/examples/ensemble-dimensions.ipynb
+++ b/docs/examples/ensemble-dimensions.ipynb
@@ -20,7 +20,7 @@
     "In a nutshell, different costs are combined to yield an aggregated cost function which is sensitive to several types of changes.\n",
     "The aggregated cost can then be used with the [window search method](../user-guide/detection/window.md) to create a change point detection algorithm.\n",
     "\n",
-    "For simplicity, we focus on mean-shifts that occurr in different dimensions of a multivariate signal.\n",
+    "For simplicity, we focus on mean-shifts that occur in different dimensions of a multivariate signal.\n",
     "Each considered cost function can only detect mean-shift in a single dimension.\n",
     "The user can choose between two aggregations procedures that can:\n",
     "\n",
